# FrankaJoylo

./: .gitignore  README.md  config.json  environment.yml  pyproject.toml  setup.sh
examples/: calibrate.py  example_takeover.py  example_teleop.py  example_tracking.py  real_teleop.py  sim_teleop.py
franka_joylo/: __init__.py  constants.py  deoxys_franka.py  dxl_driver.py  franka_interface.py  joylo.py  joylo_system.py  sim.py
models/: franka_panda.xml
models/franka_emika_panda/: scene_nohand.xml
