[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "franka_joylo"
version = "0.1.0"
description = "Teleoperate a Franka Panda using a 7-DOF Joylo controller"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "dynamixel-sdk",
]

[tool.setuptools.packages.find]
include = ["franka_joylo*"]

[project.optional-dependencies]
sim = ["mujoco>=3.0"]
dev = ["pytest", "mujoco>=3.0"]
